tests/parser/syntax-errors/expected-expr/expected_expr_not.choc
# RUN: choco-opt "%s" | filecheck "%s"

not

# CHECK:      SyntaxError (line 3, column 4): Expected expression.
# CHECK-NEXT: >>>not
# CHECK-NEXT: >>>---^
